--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "vue": "^3.0.5"
   },
   "devDependencies": {
+    "@babel/types": "^7.17.0",
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
     "typescript": "^4.3.2",
